# DeepCSAT_ecommerce_using_DL

./: DeepCSAT_Project.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt
artifacts/: scaler.pkl  tokenizer.pkl
static/: script.js  style.css
templates/: index.html
utils/: predictor.py
